# kensa-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  Dockerfile.mock  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ai-security.yml  ci.yml
configs/: default.yaml  ollama.example.yaml  test.yaml
configs/targets/: anthropic.yaml  local.yaml  openai.yaml
configs/test_packs/: basic_security.yaml  ci_quick.yaml  full_security.yaml
docs/: ARCHITECTURE.md  ISO_42001_MAPPING.md  OWASP_LLM_TOP10.md
reports/: .gitkeep
scripts/: setup.sh  verify.sh
src/kensa_ai/: __init__.py  __main__.py  cli.py
src/kensa_ai/connectors/: __init__.py  anthropic.py  base.py  http.py  ollama.py  openai.py
src/kensa_ai/core/: __init__.py  config.py  runner.py  test_case.py
src/kensa_ai/evaluators/: __init__.py  base.py  classifier.py  llm_judge.py  regex.py
src/kensa_ai/examples/: __init__.py  demo.py  extended_demo.py  integration_tests.py  judge_demo.py  mock_server.py  ollama_tests.py
src/kensa_ai/reports/: __init__.py  html_reporter.py  json_reporter.py
src/kensa_ai/test_packs/: __init__.py  data_leakage.py  hallucination.py  jailbreak.py  prompt_injection.py  toxicity.py
test_packs/prompts/: data_leakage.yaml  hallucination.yaml  jailbreak.yaml  prompt_injection.yaml  toxicity.yaml
tests/: __init__.py  conftest.py  test_comprehensive.py  test_connectors.py  test_evaluators.py  test_llm_judge.py  test_runner.py  test_test_packs.py
